--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@
 **/topology/gomc/*.pdb
 **/topology/gomc/*.psf
 **/lammps-comparison/*.dat
+
 !**/outputs_mu*/density_*.dat
 !**/outputs_mu*/number_*.dat
 !**/outputs_mu*/log.lammps
-
+!micro-pores/CO2-MFI/topology/lammps/SiO.data
 
