--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@
 
 !**/outputs_mu*/density_*.dat
 !**/outputs_mu*/number_*.dat
-!**/outputs_mu*/log.lammps
+!**/outputs_mu*/log.*
 !micro-pores/CO2-MFI/topology/lammps/SiO.data
 
