--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 **/outputs_*/*
 **/output_*
 *.dat
@@ -13,5 +14,6 @@
 !**/outputs_mu*/density_*.dat
 !**/outputs_mu*/number_*.dat
 !**/outputs_mu*/log.*
-!micro-pores/CO2-MFI/topology/lammps/SiO.data
+
+!**/lammps/SiO.data
 
